# docs/swagger.json
@@ -35,12 +35,12 @@
       "description": "Operations for managing columns."
     },
     {
-      "name": "Tasks",
+      "name": "Cards",
       "description": "Operations for managing tasks."
     },
     {
-      "name": "Need Help",
-      "description": "Possibility of sending a letter with a comment about help to the address - taskpro.project@gmail.com"
+      "name": "Help",
+      "description": "Possibility of sending a letter with a comment about help to the address - Taskpro.project@gmail.com"
     }
   ],
   "paths": {
@@ -740,9 +740,6 @@
             "multipart/form-data": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "title"
-                ],
                 "properties": {
                   "title": {
                     "description": "Title of the board",
@@ -1061,9 +1058,6 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "title"
-                ],
                 "properties": {
                   "title": {
                     "description": "Title of the column",
@@ -1154,6 +1148,351 @@
           }
         }
       }
+    },
+    "/cards": {
+      "post": {
+        "tags": [
+          "Cards"
+        ],
+        "summary": "Create a new card",
+        "operationId": "creatCard",
+        "description": "Creates a new card with the specified title.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "title",
+                  "description",
+                  "deadline"
+                ],
+                "properties": {
+                  "title": {
+                    "description": "Title of the card",
+                    "type": "string",
+                    "example": "New card"
+                  },
+                  "description": {
+                    "description": "Detailed description of the card",
+                    "type": "string",
+                    "example": "Create a visually stunning and eye-catching watch dial desing..."
+                  },
+                  "priority": {
+                    "description": "Priority level of the card",
+                    "type": "string",
+                    "enum": [
+                      "low",
+                      "medium",
+                      "high",
+                      "without"
+                    ],
+                    "example": "without",
+                    "default": "without"
+                  },
+                  "label color": {
+                    "description": "Color associated with the priority level",
+                    "type": "string",
+                    "enum": [
+                      "#8FA1D0",
+                      "#E09CB5",
+                      "#BEDBB0",
+                      "#161616"
+                    ],
+                    "example": "#161616",
+                    "default": "#161616"
+                  },
+                  "deadline": {
+                    "description": "Deadline for completing card",
+                    "type": "string",
+                    "format": "date",
+                    "example": "12/11/2024"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Card successfully created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Column created successfully"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/card"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/cards/{id}": {
+      "patch": {
+        "tags": [
+          "Cards"
+        ],
+        "summary": "Update card by id",
+        "operationId": "updateCard",
+        "description": "Update card by ID. To update, you must specify at least one field.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Unique identifier for the card",
+            "example": "645f7a1e3a1e8c2a5d8e1b0c"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "description": "Title of the card",
+                    "type": "string",
+                    "example": "The Watch Sport Design"
+                  },
+                  "description": {
+                    "description": "Detailed description of the card",
+                    "type": "string",
+                    "example": "Create a visually stunning and eye-catching watch dial desing..."
+                  },
+                  "priority": {
+                    "description": "Priority level of the card",
+                    "type": "string",
+                    "enum": [
+                      "low",
+                      "medium",
+                      "high",
+                      "without"
+                    ],
+                    "example": "without",
+                    "default": "without"
+                  },
+                  "label color": {
+                    "description": "Color associated with the priority level",
+                    "type": "string",
+                    "enum": [
+                      "#8FA1D0",
+                      "#E09CB5",
+                      "#BEDBB0",
+                      "#161616"
+                    ],
+                    "example": "#161616",
+                    "default": "#161616"
+                  },
+                  "deadline": {
+                    "description": "Deadline for completing card",
+                    "type": "string",
+                    "format": "date",
+                    "example": "12/11/2024"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Card successfully updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully patched a card!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/card"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Cards"
+        ],
+        "summary": "Delete card by id",
+        "operationId": "deleteCard",
+        "description": "Delete card by id",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "65ca67e7ae7f10c88b598384"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successfully deleted card"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/help": {
+      "post": {
+        "tags": [
+          "Help"
+        ],
+        "summary": "Send help request email",
+        "operationId": "sendHelpRequest",
+        "description": "Allows users to send a help request email with comments or questions to Taskpro support.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "email",
+                  "subject",
+                  "message"
+                ],
+                "properties": {
+                  "email": {
+                    "description": "User email address to receive a response",
+                    "type": "string",
+                    "format": "email",
+                    "example": "user@example.com"
+                  },
+                  "subject": {
+                    "description": "Subject of the help request",
+                    "type": "string",
+                    "example": "Assistance with creating a new column"
+                  },
+                  "message": {
+                    "description": "Detailed message with comments or questions",
+                    "type": "string",
+                    "example": "I need help with creating a new column in my project."
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully send message about help",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Help request sent successfully"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1221,7 +1560,7 @@
           }
         }
       },
-      "task": {
+      "card": {
         "type": "object",
         "required": [
           "title",
@@ -1231,7 +1570,7 @@
         ],
         "properties": {
           "_id": {
-            "description": "Task's unique identifier",
+            "description": "card's unique identifier",
             "type": "string",
             "example": "6702865b0b15384575dc30fa"
           },
@@ -1241,12 +1580,12 @@
             "example": "The Watch Sport Design"
           },
           "description": {
-            "description": "Detailed description of the task",
+            "description": "Detailed description of the card",
             "type": "string",
             "example": "Create a visually stunning and eye-catching watch dial desing..."
           },
           "priority": {
-            "description": "Priority level of the task",
+            "description": "Priority level of the card",
             "type": "string",
             "enum": [
               "low",
@@ -1270,13 +1609,13 @@
             "default": "#161616"
           },
           "deadline": {
-            "description": "Deadline for completing task",
+            "description": "Deadline for completing card",
             "type": "string",
             "format": "date",
             "example": "12/11/2024"
           },
           "column": {
-            "description": "Column the task belongs to",
+            "description": "Column the card belongs to",
             "type": "string",
             "example": "In Progress"
           },
@@ -1287,7 +1626,7 @@
           },
           "actions": {
             "type": "object",
-            "description": "Clickable buttons and icon associated with the task",
+            "description": "Clickable buttons and icon associated with the card",
             "properties": {
               "deadlineIcon": {
                 "description": "Icon that appears when the current date matches the deadline",
@@ -1295,30 +1634,30 @@
                 "example": true
               },
               "moveButton": {
-                "description": "Clickable button to move the task to another column",
+                "description": "Clickable button to move the card to another column",
                 "type": "string",
                 "example": "arrow-circle-broken-right"
               },
               "editButton": {
-                "description": "Clickable button with an icon for editing the task details",
+                "description": "Clickable button with an icon for editing the card details",
                 "type": "string",
                 "example": "pencil-01"
               },
               "deleteButton": {
-                "description": "Clickable button with an icon for deleting the task",
+                "description": "Clickable button with an icon for deleting the card",
                 "type": "string",
                 "example": "trash-04"
               }
             }
           },
           "createdAt": {
-            "description": "Date and time the task was originally created",
+            "description": "Date and time the card was originally created",
             "type": "string",
             "format": "date-time",
             "example": "2024-10-06T12:45:15.699Z"
           },
           "updatedAt": {
-            "description": "Date and time the task was last modified",
+            "description": "Date and time the card was last modified",
             "type": "string",
             "format": "date-time",
             "example": "2024-10-06T12:45:15.699Z"
@@ -1346,11 +1685,11 @@
             "type": "string",
             "example": "In Progress"
           },
-          "tasks": {
-            "description": "List of tasks associated with this column",
+          "cards": {
+            "description": "List of cards associated with this column",
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/task"
+              "$ref": "#/components/schemas/card"
             }
           },
           "owner": {
@@ -1482,7 +1821,7 @@
             "default": "default-bg-desk"
           },
           "columns": {
-            "description": "List of columns and tasks associated with the board",
+            "description": "List of columns and cards associated with the board",
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/column"
