# src/routers/index.js
@@ -2,11 +2,9 @@ import { Router } from 'express';
 import boardsRouter from './board.js';
 import usersRouter from './users.js';
 import authRouter from './auth.js';
-import cardsRouter from "./cards.js";
-import { authenticate } from '../middlewares/authenticate.js'; 
-import columnsRouter from './column.js';
-import tasksRouter from './tasks.js';
+import cardsRouter from './cards.js';
 import { authenticate } from '../middlewares/authenticate.js';
+import columnsRouter from './column.js';
 import helpRouter from './help.js';
 
 const router = Router();
@@ -16,7 +14,7 @@ router.use('/columns', columnsRouter);
 router.use('/users', usersRouter);
 router.use('/auth', authRouter);
 router.use('/boards', boardsRouter);
-router.use('/tasks', authenticate, tasksRouter);
+router.use('/cards', authenticate, cardsRouter);
 router.use('/help', helpRouter);
 
 export default router;
